# internal/handler/handler.go
@@ -4,6 +4,7 @@ type Handlers struct {
 	Tweet          *TweetHandler
 	User           *UserHandler
 	ProfilePicture *ProfilePictureHandler
+	TweetPicture   *TweetPictureHandler
 	Follow         *FollowHandler
 	Follower       *FollowerHandler
 	Good           *GoodHandler
